[project]
name = "rag-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
    "chromadb",
    "langchain",
    "langchain-chroma",
    "langchain-classic>=1.0.1",
    "langchain-ollama",
    "langchain-text-splitters",
    "pandas",
    "requests",
    "stqdm",
    "streamlit",
]

[tool.poetry.scripts]
# optional: entry point for Streamlit app
start = "streamlit run main.py"


